dark mode fixes

--- a/app/globals.css
+++ b/app/globals.css
@@ -79,7 +79,7 @@
 }
 
 .dark {
-  --background: oklch(0.135 0.043 272.8);
+  --background: oklch(0.2 0.043 272.8);
   --foreground: oklch(0.92 0.01 250);
   --card: oklch(0.25 0.01 260);
   --card-foreground: oklch(0.92 0.01 250);
@@ -102,7 +102,8 @@
   --chart-3: oklch(0.769 0.188 70.08);
   --chart-4: oklch(0.627 0.265 303.9);
   --chart-5: oklch(0.645 0.246 16.439);
-  --sidebar: oklch(0.25 0.01 260);
+  /* --sidebar: oklch(0.25 0.01 260); */
+  --sidebar: oklch(0.15 0.01 260);
   --sidebar-foreground: oklch(0.92 0.01 250);
   --sidebar-primary: oklch(0.488 0.243 264.376);
   --sidebar-primary-foreground: oklch(0.92 0.01 250);
